# bareASGI-cors

./: .gitignore  .pylintrc  README.md  mkdocs.yml  mypy.ini  punch_config.py  pyproject copy.toml  pyproject.toml  requirements.txt  setup.py  versions.json
3.1/: 404.html  index.html
3.1/api/bareasgi_cors/: index.html
3.1/user-guide/installation/: index.html
3.1/user-guide/usage/: index.html
4.0/: 404.html  index.html
4.0/api/bareasgi_cors/: index.html
4.0/user-guide/installation/: index.html
4.0/user-guide/usage/: index.html
bareasgi_cors/: __init__.py  cors_provider.py  helpers.py
docs/: 404.html  Makefile  api.rst  conf.py  index.html  index.rst  make.bat  sitemap.xml
docs/api/bareasgi_cors/: index.html
docs/search/: search_index.json
docs/user-guide/: installation.md
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/: index.md
documentation/api/: bareasgi_cors.md
documentation/user-guide/: installation.md  usage.md
examples/: rest_server.py  web_server.py
latest/api/bareasgi_cors/: index.html
src/bareasgi_cors/: __init__.py  cors_provider.py  headers.py
stable/api/bareasgi_cors/: index.html
stable/user-guide/installation/: index.html
stable/user-guide/usage/: index.html
