[tool.poetry]
name = "bareasgi-cors"
version = "3.1.1"
description = "CORS support for bareasgi"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_cors" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-cors"

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
uvicorn = "^0.9"
hypercorn = "^0.9"
Sphinx = "^1.8"
sphinxcontrib-websupport = "^1.1"
uvloop = "^0.13.0"
pylint = "^2.4"
mypy = "^0.740.0"
autopep8 = "^1.4"
rope = "^0.14.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
